# strikefall

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.web  README.md  Strikefall_Comprehensive_Plan_Final.docx  brand.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  playwright.qa.config.ts  rust-toolchain.toml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
apps/round-service/: Cargo.toml  README.md
apps/round-service/examples/: generate_ranked_fixture.rs
apps/round-service/src/: alpha.rs  alpha_repository.rs  api.rs  clock.rs  error.rs  lib.rs  main.rs  model.rs  repository.rs  runtime.rs  service.rs
apps/round-service/tests/: closed_alpha.rs  ranked_round.rs  repository_contract.rs
crates/strikefall-core/: Cargo.toml  README.md
crates/strikefall-core/src/: deck.rs  error.rs  hit.rs  lib.rs  no_touch.rs  path.rs  rng.rs  scoring.rs
crates/strikefall-core/tests/: monitoring_semantics.rs  no_touch_properties.rs  reference_vectors.rs
crates/strikefall-protocol/: Cargo.toml  README.md
crates/strikefall-protocol/src/: crypto.rs  engine.rs  error.rs  experiments.rs  lib.rs  types.rs  verify.rs
crates/strikefall-protocol/tests/: bot_placement.rs  compatibility.rs  deck_catalog_provenance.rs  event_mutation.rs  ranked_fixture.rs
crates/strikefall-protocol/tests/fixtures/: ranked_replay_v3.json  ranked_replay_v3_anchors.json  ranked_replay_v3_deck_v3.json  ranked_replay_v3_deck_v3_anchors.json
crates/strikefall-wasm/: Cargo.toml
crates/strikefall-wasm/src/: lib.rs
deploy/nginx/: nginx.conf  strikefall.conf.template
docs/: FAIRNESS.md  OPERATIONS.md  PERFORMANCE.md  PLAYTEST.md  PRIVACY.md  RELEASE_AUDIT.md  ROADMAP.md  SECURITY.md  SHARE_CLIP_DEVICE_CHECKLIST.md
docs/decks/: CALIBRATION.md  sample-catalog.v2.json  sample-catalog.v3.json
e2e/: accessibility.spec.ts  audio.spec.ts  daily-utc-rollover.spec.ts  experiments.spec.ts  helpers.ts  ranked-alpha.spec.ts  ranked-daily.spec.ts  ranked-helpers.ts  ranked-mobile-performance.spec.ts  share-clip.spec.ts  strikefall.spec.ts  visual-motion-matrix.spec.ts
e2e/qa/: helpers.ts  offline-install.spec.ts  performance.spec.ts  resilience.spec.ts  soak.spec.ts
migrations/: 202607140001_create_strikefall_rounds.sql  202607150001_closed_alpha_identity_metrics.sql  202607150002_telemetry_semantic_idempotency.sql  202607150003_telemetry_v2_product_events.sql
public/: manifest.webmanifest
scripts/: audit-rust.sh  build-wasm.sh  check-wasm-goldens.mjs  check-wasm-vite.mjs  check-wasm.sh  service-worker-template.ts  update-wasm-goldens.sh
scripts/wasm-goldens/: Cargo.toml
scripts/wasm-smoke/: index.html  main.ts
src/: App.tsx  main.tsx  runtimeErrors.test.ts  runtimeErrors.ts  styles.css  telemetry.test.ts  telemetry.ts
src/alpha/: LeaderboardPanel.tsx  client.test.ts  client.ts  index.ts  rankedInteractionTelemetry.test.ts  rankedInteractionTelemetry.ts  storage.ts  types.ts  useClientErrorTelemetry.test.ts  useClientErrorTelemetry.ts  useClosedAlphaSession.ts  useRankedAlphaTelemetry.ts
src/analytics/: AlphaMetricsDashboard.test.tsx  AlphaMetricsDashboard.tsx  AuthoritativeMetricsPanel.test.tsx  AuthoritativeMetricsPanel.tsx  authoritative.test.ts  authoritative.ts  export.test.ts  export.ts  index.ts  metrics.test.ts  metrics.ts  report.test.ts  report.ts
src/audio/: cues.test.ts  cues.ts  sound.ts
src/components/: ArenaCanvas.test.tsx  ArenaCanvas.tsx  GameErrorBoundary.test.tsx  GameErrorBoundary.tsx  PracticeControls.test.tsx  PracticeControls.tsx  ResultStoryStrip.tsx  personaTells.test.ts  personaTells.ts  practiceControls.css
src/engine/: ScoringEngineGate.tsx  fixed.test.ts  fixed.ts  index.ts  runtime.test.ts  runtime.ts  scoring-engine-gate.css  types.ts  wasmGolden.test.ts
src/game/: balance.test.ts  balanceG2.test.ts  bots.test.ts  bots.ts  canonical.test.ts  canonical.ts  crypto.ts  decks.ts  escape.test.ts  escape.ts  escapeBalance.test.ts  hits.test.ts  hits.ts  index.ts  liveProof.test.ts  liveProof.ts  math.ts  path.test.ts  path.ts  rankedArena.test.ts  rankedArena.ts  replay.test.ts  replay.ts  rng.test.ts  rng.ts  round.test.ts  round.ts  scoring.test.ts  scoring.ts  types.ts
src/hooks/: useRankedStrikefallGame.ts  useStrikefallGame.test.ts  useStrikefallGame.ts
src/product/: ProgressionPanel.test.tsx  ProgressionPanel.tsx  WeeklyChallengeCard.test.tsx  WeeklyChallengeCard.tsx  experiments.test.ts  experiments.ts  index.ts  preferences.test.ts  preferences.ts  profile.test.ts  profile.ts  progression.css  progression.test.ts  progression.ts  resultStories.test.tsx  resultStories.ts  rivalry.test.ts  rivalry.ts  useProductState.test.ts  useProductState.ts  weeklyChallenge.test.ts  weeklyChallenge.ts
src/pwa/: OfflineStatusBadge.tsx  cachePolicy.test.ts  cachePolicy.ts  index.ts  offline-status.css  register.test.ts  register.ts  status.ts
src/ranked/: README.md  _fixtures.ts  auth.ts  authenticatedEventSource.test.ts  authenticatedEventSource.ts  client.test.ts  client.ts  controller.test.ts  controller.ts  errorTelemetry.test.ts  errorTelemetry.ts  errors.ts  index.ts  protocol.ts  stream.test.ts  stream.ts  types.ts  validation.ts  verifier.test.ts  verifier.ts  wasmRegenerator.ts
src/replay/: LocalReplayViewer.test.tsx  LocalReplayViewer.tsx  RankedReplayViewer.tsx  derive.test.tsx  derive.ts  id.ts  index.ts  localReplay.css  publicLoader.test.ts  publicLoader.ts  replay.css  shareUrl.test.ts  shareUrl.ts  verify.test.ts  verify.ts
src/share/: artifact.ts  clipLayout.test.ts  clipLayout.ts  clipMoments.test.ts  clipMoments.ts  compositedRecorder.test.ts  compositedRecorder.ts  index.ts  layout.ts  moments.test.ts  (+10 more)
tools/model-validation/rust-validator/: Cargo.toml
tools/model-validation/rust-validator/src/: lib.rs  main.rs
tools/model-validation/rust-validator/tests/: reference_corpora.rs
tools/replay-inspector/: Cargo.toml  README.md
tools/replay-inspector/src/: lib.rs  main.rs
tools/sbf-benchmark/program/: Cargo.toml
tools/sbf-benchmark/program/src/: lib.rs
(+44 files in other folders)
