[package]
name = "strikefall-round-service"
description = "Authoritative ranked solo round service for Strikefall"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
ed25519-dalek.workspace = true
futures-core.workspace = true
getrandom.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
strikefall-core = { path = "../../crates/strikefall-core" }
strikefall-protocol = { path = "../../crates/strikefall-protocol" }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
replay-inspector = { path = "../../tools/replay-inspector" }
tower.workspace = true

[lints]
workspace = true
