[package]
name = "strikefall-protocol"
description = "Versioned API, event, commitment, and replay types for Strikefall"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
sha2.workspace = true
strikefall-core = { path = "../strikefall-core" }
thiserror.workspace = true

[lints]
workspace = true
